moved core to engine

--- a/susumu/susumu.vcxproj
+++ b/susumu/susumu.vcxproj
@@ -141,32 +141,32 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\core\renderer\buffer.h" />
-    <ClInclude Include="src\core\renderer\camera.h" />
-    <ClInclude Include="src\core\renderer\renderer.h" />
-    <ClInclude Include="src\core\renderer\renderer_api.h" />
-    <ClInclude Include="src\core\renderer\render_command.h" />
-    <ClInclude Include="src\core\renderer\shader.h" />
-    <ClInclude Include="src\core\renderer\vertex_array.h" />
+    <ClInclude Include="src\engine\app.h" />
+    <ClInclude Include="src\engine\core.h" />
+    <ClInclude Include="src\engine\events\app_event.h" />
+    <ClInclude Include="src\engine\events\event.h" />
+    <ClInclude Include="src\engine\events\key_event.h" />
+    <ClInclude Include="src\engine\events\mouse_event.h" />
+    <ClInclude Include="src\engine\imgui\imgui_layer.h" />
+    <ClInclude Include="src\engine\input.h" />
+    <ClInclude Include="src\engine\keycodes.h" />
+    <ClInclude Include="src\engine\layer.h" />
+    <ClInclude Include="src\engine\layer_stack.h" />
+    <ClInclude Include="src\engine\log.h" />
+    <ClInclude Include="src\engine\renderer\buffer.h" />
+    <ClInclude Include="src\engine\renderer\camera.h" />
+    <ClInclude Include="src\engine\renderer\graphics_context.h" />
+    <ClInclude Include="src\engine\renderer\render_command.h" />
+    <ClInclude Include="src\engine\renderer\renderer.h" />
+    <ClInclude Include="src\engine\renderer\renderer_api.h" />
+    <ClInclude Include="src\engine\renderer\shader.h" />
+    <ClInclude Include="src\engine\renderer\vertex_array.h" />
+    <ClInclude Include="src\engine\startup.h" />
+    <ClInclude Include="src\engine\window.h" />
     <ClInclude Include="src\platform\opengl\opengl_buffer.h" />
     <ClInclude Include="src\platform\opengl\opengl_context.h" />
-    <ClInclude Include="src\core\app.h" />
-    <ClInclude Include="src\core\core.h" />
-    <ClInclude Include="src\core\events\app_event.h" />
-    <ClInclude Include="src\core\events\event.h" />
-    <ClInclude Include="src\core\events\key_event.h" />
-    <ClInclude Include="src\core\events\mouse_event.h" />
-    <ClInclude Include="src\core\imgui\imgui_layer.h" />
-    <ClInclude Include="src\core\input.h" />
-    <ClInclude Include="src\core\keycodes.h" />
-    <ClInclude Include="src\core\layer.h" />
-    <ClInclude Include="src\core\layer_stack.h" />
-    <ClInclude Include="src\core\log.h" />
-    <ClInclude Include="src\core\renderer\graphics_context.h" />
-    <ClInclude Include="src\core\startup.h" />
-    <ClInclude Include="src\core\window.h" />
-    <ClInclude Include="src\platform\opengl\opengl_vertex_array.h" />
     <ClInclude Include="src\platform\opengl\opengl_renderer_api.h" />
+    <ClInclude Include="src\platform\opengl\opengl_vertex_array.h" />
     <ClInclude Include="src\platform\windows\windows_input.h" />
     <ClInclude Include="src\platform\windows\windows_window.h" />
     <ClInclude Include="src\supch.h" />
@@ -586,23 +586,23 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\core\renderer\buffer.cpp" />
-    <ClCompile Include="src\core\renderer\camera.cpp" />
-    <ClCompile Include="src\core\renderer\renderer.cpp" />
-    <ClCompile Include="src\core\renderer\renderer_api.cpp" />
-    <ClCompile Include="src\core\renderer\render_command.cpp" />
-    <ClCompile Include="src\core\renderer\shader.cpp" />
-    <ClCompile Include="src\core\renderer\vertex_array.cpp" />
+    <ClCompile Include="src\engine\app.cpp" />
+    <ClCompile Include="src\engine\imgui\imgui_build.cpp" />
+    <ClCompile Include="src\engine\imgui\imgui_layer.cpp" />
+    <ClCompile Include="src\engine\layer.cpp" />
+    <ClCompile Include="src\engine\layer_stack.cpp" />
+    <ClCompile Include="src\engine\log.cpp" />
+    <ClCompile Include="src\engine\renderer\buffer.cpp" />
+    <ClCompile Include="src\engine\renderer\camera.cpp" />
+    <ClCompile Include="src\engine\renderer\render_command.cpp" />
+    <ClCompile Include="src\engine\renderer\renderer.cpp" />
+    <ClCompile Include="src\engine\renderer\renderer_api.cpp" />
+    <ClCompile Include="src\engine\renderer\shader.cpp" />
+    <ClCompile Include="src\engine\renderer\vertex_array.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_buffer.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_context.cpp" />
-    <ClCompile Include="src\core\app.cpp" />
-    <ClCompile Include="src\core\imgui\imgui_build.cpp" />
-    <ClCompile Include="src\core\imgui\imgui_layer.cpp" />
-    <ClCompile Include="src\core\layer.cpp" />
-    <ClCompile Include="src\core\layer_stack.cpp" />
-    <ClCompile Include="src\core\log.cpp" />
-    <ClCompile Include="src\platform\opengl\opengl_vertex_array.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_renderer_api.cpp" />
+    <ClCompile Include="src\platform\opengl\opengl_vertex_array.cpp" />
     <ClCompile Include="src\platform\windows\windows_input.cpp" />
     <ClCompile Include="src\platform\windows\windows_window.cpp" />
     <ClCompile Include="src\supch.cpp">
