--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -58,6 +58,12 @@ Size=370,379
 Collapsed=0
 DockId=0x00000008,0
 
+[Window][Settings]
+ViewportPos=1008,257
+ViewportId=0x1C33C293
+Size=344,338
+Collapsed=0
+
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Pos=0,42 Size=1920,1008 Split=X
   DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=1425,1008 Split=X
