--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -59,8 +59,7 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Settings]
-ViewportPos=1228,339
-ViewportId=0x1C33C293
+Pos=1564,8
 Size=344,338
 Collapsed=0
 
