--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -59,7 +59,8 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Settings]
-Pos=1564,8
+ViewportPos=1172,327
+ViewportId=0x1C33C293
 Size=344,338
 Collapsed=0
 
