--- a/susumu/susumu.vcxproj
+++ b/susumu/susumu.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
       <Configuration>Debug</Configuration>
@@ -19,27 +19,26 @@
     <IgnoreWarnCompileDuplicatedFilename>true</IgnoreWarnCompileDuplicatedFilename>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>susumu</RootNamespace>
-    <LatestTargetPlatformVersion>$([Microsoft.Build.Utilities.ToolLocationHelper]::GetLatestSDKTargetPlatformVersion('Windows', '10.0'))</LatestTargetPlatformVersion>
-    <WindowsTargetPlatformVersion>$(LatestTargetPlatformVersion)</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Dist|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -141,31 +140,31 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="src\engine\app.h" />
-    <ClInclude Include="src\engine\core.h" />
+    <ClInclude Include="src\engine\core\app.h" />
+    <ClInclude Include="src\engine\core\core.h" />
+    <ClInclude Include="src\engine\core\input.h" />
+    <ClInclude Include="src\engine\core\keycodes.h" />
+    <ClInclude Include="src\engine\core\layer.h" />
+    <ClInclude Include="src\engine\core\layer_stack.h" />
+    <ClInclude Include="src\engine\core\log.h" />
+    <ClInclude Include="src\engine\core\startup.h" />
     <ClInclude Include="src\engine\core\timestep.h" />
+    <ClInclude Include="src\engine\core\window.h" />
     <ClInclude Include="src\engine\events\app_event.h" />
     <ClInclude Include="src\engine\events\event.h" />
     <ClInclude Include="src\engine\events\key_event.h" />
     <ClInclude Include="src\engine\events\mouse_event.h" />
     <ClInclude Include="src\engine\imgui\imgui_layer.h" />
-    <ClInclude Include="src\engine\input.h" />
-    <ClInclude Include="src\engine\keycodes.h" />
-    <ClInclude Include="src\engine\layer.h" />
-    <ClInclude Include="src\engine\layer_stack.h" />
-    <ClInclude Include="src\engine\log.h" />
-    <ClInclude Include="src\engine\orthographic_camera_controller.h" />
     <ClInclude Include="src\engine\renderer\buffer.h" />
     <ClInclude Include="src\engine\renderer\camera.h" />
     <ClInclude Include="src\engine\renderer\graphics_context.h" />
+    <ClInclude Include="src\engine\renderer\orthographic_camera_controller.h" />
     <ClInclude Include="src\engine\renderer\render_command.h" />
     <ClInclude Include="src\engine\renderer\renderer.h" />
     <ClInclude Include="src\engine\renderer\renderer_api.h" />
     <ClInclude Include="src\engine\renderer\shader.h" />
     <ClInclude Include="src\engine\renderer\texture.h" />
     <ClInclude Include="src\engine\renderer\vertex_array.h" />
-    <ClInclude Include="src\engine\startup.h" />
-    <ClInclude Include="src\engine\window.h" />
     <ClInclude Include="src\platform\opengl\opengl_buffer.h" />
     <ClInclude Include="src\platform\opengl\opengl_context.h" />
     <ClInclude Include="src\platform\opengl\opengl_renderer_api.h" />
@@ -592,15 +591,15 @@
     <ClInclude Include="vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\engine\app.cpp" />
+    <ClCompile Include="src\engine\core\app.cpp" />
+    <ClCompile Include="src\engine\core\layer.cpp" />
+    <ClCompile Include="src\engine\core\layer_stack.cpp" />
+    <ClCompile Include="src\engine\core\log.cpp" />
     <ClCompile Include="src\engine\imgui\imgui_build.cpp" />
     <ClCompile Include="src\engine\imgui\imgui_layer.cpp" />
-    <ClCompile Include="src\engine\layer.cpp" />
-    <ClCompile Include="src\engine\layer_stack.cpp" />
-    <ClCompile Include="src\engine\log.cpp" />
-    <ClCompile Include="src\engine\orthographic_camera_controller.cpp" />
     <ClCompile Include="src\engine\renderer\buffer.cpp" />
     <ClCompile Include="src\engine\renderer\camera.cpp" />
+    <ClCompile Include="src\engine\renderer\orthographic_camera_controller.cpp" />
     <ClCompile Include="src\engine\renderer\render_command.cpp" />
     <ClCompile Include="src\engine\renderer\renderer.cpp" />
     <ClCompile Include="src\engine\renderer\renderer_api.cpp" />
