--- a/susumu/susumu.vcxproj
+++ b/susumu/susumu.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="src\engine\renderer\camera.h" />
     <ClInclude Include="src\engine\renderer\graphics_context.h" />
     <ClInclude Include="src\engine\renderer\orthographic_camera_controller.h" />
+    <ClInclude Include="src\engine\renderer\renderer_2d.h" />
     <ClInclude Include="src\engine\renderer\render_command.h" />
     <ClInclude Include="src\engine\renderer\renderer.h" />
     <ClInclude Include="src\engine\renderer\renderer_api.h" />
@@ -604,6 +605,7 @@
     <ClCompile Include="src\engine\renderer\buffer.cpp" />
     <ClCompile Include="src\engine\renderer\camera.cpp" />
     <ClCompile Include="src\engine\renderer\orthographic_camera_controller.cpp" />
+    <ClCompile Include="src\engine\renderer\renderer_2d.cpp" />
     <ClCompile Include="src\engine\renderer\render_command.cpp" />
     <ClCompile Include="src\engine\renderer\renderer.cpp" />
     <ClCompile Include="src\engine\renderer\renderer_api.cpp" />
