--- a/susumu/susumu.vcxproj.filters
+++ b/susumu/susumu.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClInclude Include="src\engine\renderer\renderer.h">
       <Filter>src\engine\renderer</Filter>
     </ClInclude>
+    <ClInclude Include="src\engine\renderer\renderer_2d.h">
+      <Filter>src\engine\renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\engine\renderer\renderer_api.h">
       <Filter>src\engine\renderer</Filter>
     </ClInclude>
@@ -1401,7 +1404,6 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
-    <ClInclude Include="src\engine\renderer\renderer_2d.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\engine\core\app.cpp">
@@ -1435,6 +1437,9 @@
       <Filter>src\engine\renderer</Filter>
     </ClCompile>
     <ClCompile Include="src\engine\renderer\renderer.cpp">
+      <Filter>src\engine\renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\engine\renderer\renderer_2d.cpp">
       <Filter>src\engine\renderer</Filter>
     </ClCompile>
     <ClCompile Include="src\engine\renderer\renderer_api.cpp">
@@ -1479,6 +1484,5 @@
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
-    <ClCompile Include="src\engine\renderer\renderer_2d.cpp" />
   </ItemGroup>
 </Project>
